# pdf_toolbox

./: .gitignore  LICENSE  PDFSplitter.spec  PDF結合ツールのプロンプト案.md  README.html  README.md  backup.ps1  build-exe.ps1  github-markdown.css  main.py  pdf_toolbox.iss  pdf_toolbox.spec  pyproject.toml
.github/: pdf_flattener-plan.md
.github/prompts/: pdf-flatten-phase1-implementation-plan.prompt.md  pdf-flatten-phase2.prompt.md  pdf-flatten-phase3.prompt.md  phase1-pdfMergeTool-foundation.prompt.md  phase2-pdfMergeTool-thumbnails.prompt.md  phase3-pdfMergeTool-mergeExecution.prompt.md  phase4-pdfMergeTool-testsAndPolish.prompt.md  plan-extractDndFix.prompt.md  plan-extractLazyLoadingRootFix.prompt.md  plan-ghostscriptCompressionIntegration.prompt.md  plan-mergeExtractPollingRaceFix.prompt.md  plan-pdfExtraction.prompt.md  plan-pdfMergeTool.prompt.md  (+1 more)
debug_scripts/: create_pdfs_with_annotations_and_widgets.py  fitz_bake-save_analysis.py
docs/: developer-architecture.html  developer-architecture.md  keyboard-shortcuts.html  keyboard-shortcuts.md  release_note.html  release_note.md  user-manual.html  user-manual.md
model/: __init__.py  external_tools.py  pdf_document.py
presenter/: __init__.py  app_coordinator.py  compress_presenter.py  extract_presenter.py  flatten_presenter.py  main_presenter.py  merge_presenter.py  pdf_to_jpeg_presenter.py  split_presenter.py
scripts/: build-docs-html.ps1  build-exe.ps1  get_version.py
tests/: conftest.py  test_imports.py
view/: __init__.py  font_config.py  home_view.py  main_window.py  startup_splash.py
(+88 files in other folders)
