[project]
name = "pdf-toolbox"
version = "1.0.1"
description = "PDF ツールボックス (PySide6)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pikepdf>=10.5.0",
    "pillow>=12.1.1",
    "pyinstaller>=6.19.0",
    "pymupdf>=1.27.1",
    "PySide6>=6.7",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
]

[tool.pytest.ini_options]
qt_api = "pyside6"
